--- a/Heart_deases.ipynb
+++ b/Heart_deases.ipynb
@@ -3406,14 +3406,169 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## XGBoost Implemetation and Hyperparameter Tuning"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.819672131147541"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "# Defining the classifier\n",
+    "\n",
+    "xgb_clf=XGBClassifier()\n",
+    "\n",
+    "# Fitting the model on the data \n",
+    "xgb_clf.fit(X_train,y_train)\n",
+    "\n",
+    "#Evaluate the model\n",
+    "xgb_clf.score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Hyperparameter Tuning the XGBoost\n",
+    "\n",
+    "## Hyper Parameter Optimization\n",
+    "\n",
+    "params={\n",
+    " \"learning_rate\"    : [0.05, 0.10, 0.15, 0.20, 0.25, 0.30 ] ,\n",
+    " \"max_depth\"        : [ 3, 4, 5, 6, 8, 10, 12, 15],\n",
+    " \"min_child_weight\" : [ 1, 3, 5, 7 ],\n",
+    " \"gamma\"            : [ 0.0, 0.1, 0.2 , 0.3, 0.4 ],\n",
+    " \"colsample_bytree\" : [ 0.3, 0.4, 0.5 , 0.7 ]\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=5,\n",
+       "                   estimator=XGBClassifier(base_score=None, booster=None,\n",
+       "                                           callbacks=None,\n",
+       "                                           colsample_bylevel=None,\n",
+       "                                           colsample_bynode=None,\n",
+       "                                           colsample_bytree=None,\n",
+       "                                           early_stopping_rounds=None,\n",
+       "                                           enable_categorical=False,\n",
+       "                                           eval_metric=None, gamma=None,\n",
+       "                                           gpu_id=None, grow_policy=None,\n",
+       "                                           importance_type=None,\n",
+       "                                           interaction_constraints=None,\n",
+       "                                           learning_rate=None, max_bin=None,...\n",
+       "                                           monotone_constraints=None,\n",
+       "                                           n_estimators=100, n_jobs=None,\n",
+       "                                           num_parallel_tree=None,\n",
+       "                                           predictor=None, random_state=None,\n",
+       "                                           reg_alpha=None, reg_lambda=None, ...),\n",
+       "                   param_distributions={'colsample_bytree': [0.3, 0.4, 0.5,\n",
+       "                                                             0.7],\n",
+       "                                        'gamma': [0.0, 0.1, 0.2, 0.3, 0.4],\n",
+       "                                        'learning_rate': [0.05, 0.1, 0.15, 0.2,\n",
+       "                                                          0.25, 0.3],\n",
+       "                                        'max_depth': [3, 4, 5, 6, 8, 10, 12,\n",
+       "                                                      15],\n",
+       "                                        'min_child_weight': [1, 3, 5, 7]},\n",
+       "                   verbose=True)"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb_clf2=XGBClassifier()\n",
+    "Rand_XGBoost= RandomizedSearchCV(xgb_clf2,\n",
+    "                           param_distributions=params,\n",
+    "                           cv=5,\n",
+    "                           \n",
+    "                           verbose=True)\n",
+    "\n",
+    "# gs_log_reg= GridSearchCV(LogisticRegression(),\n",
+    "#                          param_grid=log_reg_grid,\n",
+    "#                          cv=5,\n",
+    "#                          verbose=True)\n",
+    "\n",
+    "# Fitting the model\n",
+    "Rand_XGBoost.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8852459016393442"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Rand_XGBoost.score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'min_child_weight': 7,\n",
+       " 'max_depth': 12,\n",
+       " 'learning_rate': 0.05,\n",
+       " 'gamma': 0.3,\n",
+       " 'colsample_bytree': 0.3}"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Rand_XGBoost.best_params_"
+   ]
   }
  ],
  "metadata": {
